Add Spring validation, MapStruct mappers, and complete CRUD for User and Patient