@@ -1,127 +1,92 @@
 package io.github.guiboava.bem_dosado.controller;
 
-import io.github.guiboava.bem_dosado.controller.dto.ErrorResponse;
 import io.github.guiboava.bem_dosado.controller.dto.UserRequestDTO;
 import io.github.guiboava.bem_dosado.controller.dto.UserResponseDTO;
+import io.github.guiboava.bem_dosado.controller.mappers.UserMapper;
 import io.github.guiboava.bem_dosado.entity.model.User;
-import io.github.guiboava.bem_dosado.exception.DuplicateRegisterException;
-import io.github.guiboava.bem_dosado.exception.OperationNotPermittedException;
+import io.github.guiboava.bem_dosado.entity.model.enums.Gender;
+import io.github.guiboava.bem_dosado.entity.model.enums.UserType;
 import io.github.guiboava.bem_dosado.service.UserService;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.net.URI;
+import java.time.LocalDate;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController()
 @RequestMapping("/users")
 @RequiredArgsConstructor
-public class UserController {
+public class UserController implements GenericController {
 
-    private final UserService userService;
+    private final UserService service;
+    private final UserMapper mapper;
 
     @PostMapping
-    public ResponseEntity<Object> createUser(@RequestBody UserRequestDTO user) {
-        try {
-            var userEntity = user.createUser();
-            userService.save(userEntity);
-            URI uri = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}").buildAndExpand(userEntity.getId()).toUri();
-            return ResponseEntity.created(uri).build();
-        } catch (DuplicateRegisterException e) {
-            var errorDTO = ErrorResponse.conflict(e.getMessage());
-            return ResponseEntity.status(errorDTO.status()).body(errorDTO);
-        }
+    public ResponseEntity<Void> createUser(@RequestBody @Valid UserRequestDTO user) {
+
+        var userEntity = mapper.toEntity(user);
+        service.save(userEntity);
+        URI uri = generateHeaderLocation(userEntity.getId());
+        return ResponseEntity.created(uri).build();
 
     }
 
     @GetMapping
-    public ResponseEntity<List<UserResponseDTO>> searchUser() {
-        List<User> getUsersList = userService.getUsers();
-        List<UserResponseDTO> list = getUsersList.stream().map(user -> new UserResponseDTO(
-                user.getId(),
-                user.getName(),
-                user.getUserName(),
-                user.getEmail(),
-                user.getCpf(),
-                user.getUserType(),
-                user.getGender(),
-                user.getPhoneNumber(),
-                user.getCep(),
-                user.getBirthDate())).collect(Collectors.toList());
+    public ResponseEntity<List<UserResponseDTO>> searchUser(@RequestParam(value = "name", required = false) String name,
+                                                            @RequestParam(value = "userName", required = false) String userName,
+                                                            @RequestParam(value = "email", required = false) String email,
+                                                            @RequestParam(value = "cpf", required = false) String cpf,
+                                                            @RequestParam(value = "userType", required = false) UserType userType,
+                                                            @RequestParam(value = "gender", required = false) Gender gender,
+                                                            @RequestParam(value = "phoneNumber", required = false) String phoneNumber,
+                                                            @RequestParam(value = "birthDate", required = false) LocalDate birthDate
+    ) {
+        List<User> searchUsers = service.searchByExample(name, userName, email, cpf, userType, gender, phoneNumber, birthDate);
+        List<UserResponseDTO> list = searchUsers.stream()
+                .map(mapper::toDTO)
+                .toList();
         return ResponseEntity.ok(list);
     }
 
-    //TESTAR
-    @GetMapping("{id}")
+    @GetMapping("/{id}")
     public ResponseEntity<UserResponseDTO> getByUserId(@PathVariable("id") String id) {
-        // ADD TRY CATCH
         UUID userId = UUID.fromString(id);
-        Optional<User> userOptional = userService.getById(userId);
-        if (userOptional.isPresent()) {
-            User user = userOptional.get();
-            UserResponseDTO dto = new UserResponseDTO(user.getId(),
-                    user.getName(),
-                    user.getUserName(),
-                    user.getEmail(),
-                    user.getCpf(),
-                    user.getUserType(),
-                    user.getGender(),
-                    user.getPhoneNumber(),
-                    user.getCep(),
-                    user.getBirthDate());
-            return ResponseEntity.ok(dto);
-        }
-        return ResponseEntity.notFound().build();
+        return service.getById(userId)
+                .map(mapper::toDTO)
+                .map(ResponseEntity::ok)
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
-    @DeleteMapping("{id}")
-    public ResponseEntity<Object> deleteUser(@PathVariable("id") String id) {
-        try {
-            UUID userId = UUID.fromString(id);
-            Optional<User> optionalUser = userService.getById(userId);
-            if (optionalUser.isEmpty()) {
-                return ResponseEntity.notFound().build();
-            }
-            userService.delete(optionalUser.get());
-            return ResponseEntity.noContent().build();
-        } catch (OperationNotPermittedException e) {
-            var errorResponse = ErrorResponse.defaultError(e.getMessage());
-            return ResponseEntity.status(errorResponse.status()).body(errorResponse);
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteUser(@PathVariable("id") String id) {
+        UUID userId = UUID.fromString(id);
+        Optional<User> optionalUser = service.getById(userId);
+        if (optionalUser.isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
+        service.delete(optionalUser.get());
+        return ResponseEntity.noContent().build();
     }
 
-    @PutMapping("{id}")
-    public ResponseEntity<Object> updateUser(@PathVariable("id") String id, @RequestBody UserRequestDTO dto) {
-        try {
-            UUID userId = UUID.fromString(id);
-            Optional<User> userOptional = userService.getById(userId);
-            if (userOptional.isEmpty()) {
-                return ResponseEntity.notFound().build();
-            }
-            var user = userOptional.get();
-            user.setName(dto.name());
-            user.setUserName(dto.userName());
-            user.setEmail(dto.email());
-            user.setCpf(dto.cpf());
-            user.setUserType(dto.userType());
-            user.setPassword(dto.password());
-            user.setGender(dto.gender());
-            user.setPhoneNumber(dto.phoneNumber());
-            user.setCep(dto.cep());
-            user.setBirthDate(dto.birthDate());
+    @PutMapping("/{id}")
+    public ResponseEntity<Object> updateUser(@PathVariable("id") String id, @RequestBody @Valid UserRequestDTO dto) {
+        return service.getById(UUID.fromString(id))
+                .map(user -> {
+                    mapper.updateEntityFromDto(dto, user);
 
-            userService.update(user);
+                    service.update(user);
 
-            return ResponseEntity.noContent().build();
-        } catch (DuplicateRegisterException e) {
-            var errorDTO = ErrorResponse.conflict(e.getMessage());
-            return ResponseEntity.status(errorDTO.status()).body(errorDTO);
-        }
+                    return ResponseEntity.noContent().build();
+                })
+                .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND)
+                        .body("Usuário não encontrado!"));
     }
 
 }
